--- a/src/translation/en.json
+++ b/src/translation/en.json
@@ -124,34 +124,21 @@
   },
   "onboarding": {
     "step1": {
-      "welcome": "Welcome",
-      "to-app": "to the Dooit app",
-      "option1": {
-        "title": "Create habits",
-        "subtitle": "Choose what and when to repeat so it becomes a routine."
-      },
-      "option2": {
-        "title": "Make choices",
-        "subtitle": "Go for what’s good and steadily repeat planned actions."
-      },
-      "option3": {
-        "title": "Monitor progress",
-        "subtitle": "Maintain high effectiveness and start seeing your progress."
-      }
+      "title": "Welcome to Dooit",
+      "subtitle": "Where habits are built",
+      "name": "Enter your name"
     },
     "step2": {
       "choose": "Choose",
-      "which-habits": "which habits do you want to create"
+      "which-habits": "which habits you want to build"
     },
     "step3": {
-      "select-repetition": "Select the repetition time",
-      "accept-default": "or accept the default days and hours"
+      "select-repetition": "Customize",
+      "accept-default": "or keep the default repetition settings"
     },
-    "step4": {
-      "congratulations": "Let's get started!",
-      "ready-to-start": "It's time to begin your habit journey.",
-      "have-fun": "Have fun and become your better self.",
-      "name-placeholder": "Enter your name"
+    "start": {
+      "title": "Let’s get started!",
+      "text": "This is the main screen of the app. You will always see the habit that is most relevant to complete right now.\n\nFor each habit, you make a simple choice: complete the good habit, fall back into the bad one, or skip it entirely.\n\nBased on these choices, Dooit tracks how well you are building your habits. Once you finish all repetitions planned for today, you’ll see a short summary of your progress.\n\nGood luck!"
     }
   },
   "default-habits": {
