--- a/src/translation/en.json
+++ b/src/translation/en.json
@@ -6,7 +6,8 @@
   },
   "title": {
     "add": "Add habit",
-    "delete": "Delete habit",
+    "delete-habit": "Delete habit",
+    "delete-execution": "Delete execution",
     "skip": "Skip habit",
     "no-habits": "No habits",
     "contact": "Contact",
@@ -38,7 +39,8 @@
     "connection-fail": "Disconnected"
   },
   "message": {
-    "delete": "Are you sure to remove the habit:",
+    "delete-habit": "Are you sure to remove the habit:",
+    "delete-execution": "Are you sure to remove this execution?",
     "contact": "Fill out the form to contact the app's author.",
     "support": "Hey there! 👋\n\nI’m building Dooit on my own, with strong belief that it can truly improve everyday life. Every line of code was written to help you build habits that make a real difference.\n\nIf you feel that Dooit has supported you in some way, I’d appreciate it a lot if you contributed to its development - even with a virtual coffee. It’s a sign for me that what I’m doing matters.\n\n~ Mikołaj Bryksa"
   },
