--- a/src/translation/en.json
+++ b/src/translation/en.json
@@ -4,15 +4,21 @@
     "habits": "Habits",
     "settings": "Settings"
   },
+  "loading": {
+    "subtitle": "Please be patient.",
+    "title": "Loading"
+  },
+  "empty": {
+    "subtitle": "There are no habits for today.",
+    "title": "No habits"
+  },
   "title": {
     "add": "Add habit",
     "delete-habit": "Delete habit",
     "delete-execution": "Delete execution",
-    "no-habits": "No habits",
     "contact": "Contact",
     "support": "Coffee",
     "filter": "Filter habits",
-    "loading-habits": "Loading habits",
     "history": "History"
   },
   "settings": {
@@ -89,8 +95,7 @@
     "goodCounter": "Right choices",
     "badCounter": "Easy choices",
     "effectiveness": "Effectiveness",
-    "noRepetitions": "No repetitions",
-    "done": "All done today!"
+    "noRepetitions": "No repetitions"
   },
   "date": {
     "daily": "Daily",
@@ -140,8 +145,9 @@
       "accept-default": "or keep the default repetition settings"
     },
     "start": {
-      "title": "Let’s get started!",
-      "text": "This screen shows the habit that is worth doing right now. For each habit, you make a simple choice: complete the habit or skip it.\n\nOnce you finish all repetitions planned for today, you’ll see a short summary of your progress.\n\nGood luck, {{userName}}!"
+      "subtitle": "Hi, {{userName}}",
+      "title": "Let’s get started",
+      "text": "This screen shows the habit that is worth doing right now. For each habit, you make a simple choice: complete the habit or skip it. Once you finish all repetitions planned for today, you’ll see a summary of your progress."
     }
   },
   "default-habits": {
@@ -187,12 +193,12 @@
       "Each action shapes who you become.",
       "You’re building the best version of you.",
       "You’re writing your success story.",
-      "Great choice — your routine is working."
+      "Great choice, your routine is working."
     ],
     "bad": [
       "One slip doesn’t erase your progress.",
       "Learn from it, then move forward.",
-      "Don’t quit — adjust and continue.",
+      "Don’t quit, adjust and continue.",
       "It’s a stumble, not a failure.",
       "Focus on progress, not perfection.",
       "Your habit is stronger than this moment.",
@@ -201,19 +207,16 @@
       "A pause doesn’t erase progress.",
       "You’re still on track.",
       "It’s just a break, not a setback.",
-      "Skips happen — keep moving forward.",
+      "Skips happen, keep moving forward.",
       "Even breaks can fuel progress.",
       "It’s just a pause, your journey continues."
     ]
   },
   "summary": {
+    "subtitle": "All done today!",
+    "title": "Daily summary",
     "error-reading": "Error reading generated summary.",
     "no-actions": "Your progress summary will appear here once you complete at least one repetition of your chosen habit.",
     "no-response": "Failed to generate summary. AI has not provided a response."
-  },
-  "error": {
-    "title": "Something went wrong",
-    "message": "An unexpected error occurred.\n\nThe error has been reported. Please restart the app or try again.",
-    "restart": "Try Again"
   }
 }
